pass reset
