# src/app/modules/openapi/model/password-reset-dto.ts
@@ -1,0 +1,16 @@
+/**
+ * E-Commerce Application
+ *
+ * Contact: sad@gmail.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface PasswordResetDTO { 
+    token: string;
+    newPassword: string;
+}
+
