# src/app/modules/openapi/model/password-reset-request-dto.ts
@@ -1,0 +1,15 @@
+/**
+ * E-Commerce Application
+ *
+ * Contact: sad@gmail.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface PasswordResetRequestDTO { 
+    email: string;
+}
+
